# flet-audio-recorder

./: .docstr.yaml  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
audio_recorder/: index.html
audioencoder/: index.html
audiorecorder/: index.html
audiorecorderstate/: index.html
audiorecorderstatechangeevent/: index.html
changelog/: index.html
docs/: audio_recorder.md  audioencoder.md  audiorecorder.md  audiorecorderstate.md  audiorecorderstatechangeevent.md  index.md
docs/types/: android_audio_source.md  android_recorder_configuration.md  audio_recorder_configuration.md  audioencoder.md  audiorecorderstate.md  audiorecorderstatechangeevent.md  input_device.md  ios_audio_category_option.md  ios_recorder_configuration.md
examples/audio_recorder_example/: pyproject.toml
examples/audio_recorder_example/src/: example_1.py  main.py
license/: index.html
search/: search_index.json
src/flet_audio_recorder/: __init__.py  audio_recorder.py  types.py
src/flutter/flet_audio_recorder/: pubspec.yaml
src/flutter/flet_audio_recorder/lib/src/: audio_recorder.dart
types/android_audio_source/: index.html
types/android_recorder_configuration/: index.html
types/audio_recorder_configuration/: index.html
types/audio_recorder_state/: index.html
types/audioencoder/: index.html
types/audiorecorderstate/: index.html
types/audiorecorderstatechangeevent/: index.html
types/input_device/: index.html
types/ios_audio_category_option/: index.html
types/ios_recorder_configuration/: index.html
