[project]
name = "flet-audio-recorder"
version = "0.2.0"
description = "Adds audio recording support to Flet apps."
readme = "README.md"
authors = [{ name = "Flet contributors", email = "hello@flet.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet-dev.github.io/flet-audio-recorder"
Repository = "https://github.com/flet-dev/flet-audio-recorder"
Issues = "https://github.com/flet-dev/flet-audio-recorder/issues"

[tool.setuptools.package-data]
"flutter.flet_audio_recorder" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
