[project]
name = "flet-audio-recorder-example"
version = "1.0.0"
description = "Flet AudioRecorder Example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flet-audio-recorder",
  "flet",
]
# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "flet-audio-recorder-example"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"
